--- a/aaron_PSS.ipynb
+++ b/aaron_PSS.ipynb
@@ -4179,7 +4179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "7f689ef9",
    "metadata": {},
    "outputs": [
@@ -4218,8 +4218,8 @@
     "ax.set_xticklabels(labels, rotation=30, ha=\"right\")\n",
     "\n",
     "ax.set_ylabel(\"Probability\")\n",
-    "ax.set_xlabel(\"Magnitude Ratio Range\")\n",
-    "ax.set_title(\"JetClass Kinetmatic Probability Distribution of Attention/Interaction Ratio\", fontsize=12)\n",
+    "ax.set_xlabel(\"Relative Magnitude of Attention/Interaction Scores\")\n",
+    "#ax.set_title(\"JetClass Kinetmatic Probability Distribution of Attention/Interaction Ratio\", fontsize=12)\n",
     "ax.margins(y=0.05)  # small headroom for annotations\n",
     "\n",
     "# Annotate probabilities\n",
@@ -4228,8 +4228,8 @@
     "        ax.text(i, p, f\"{p:.3f}\", ha=\"center\", va=\"bottom\", fontsize=8)\n",
     "\n",
     "plt.tight_layout()\n",
-    "out_path = '/part-vol-3/weaver-core/parTaaron/InterpPlots/JCK_AttnBar.pdf'\n",
-    "os.makedirs(os.path.dirname(out_path), exist_ok=True)\n",
+    "out_path = './JCK_AttnBar.pdf'\n",
+    "#os.makedirs(os.path.dirname(out_path), exist_ok=True)\n",
     "plt.savefig(out_path, bbox_inches=\"tight\")\n",
     "plt.show()\n"
    ]
@@ -4415,8 +4415,8 @@
     "ax.set_xticklabels(labels, rotation=30, ha=\"right\")\n",
     "\n",
     "ax.set_ylabel(\"Probability\")\n",
-    "ax.set_xlabel(\"Magnitude Ratio Range\")\n",
-    "ax.set_title(\"JetClass Probability Distribution of Attention/Interaction Ratio\", fontsize=12)\n",
+    "ax.set_xlabel(\"Relative Magnitude of Attention/Interaction Scores\")\n",
+    "#ax.set_title(\"JetClass Probability Distribution of Attention/Interaction Ratio\", fontsize=12)\n",
     "ax.margins(y=0.05)  # small headroom for annotations\n",
     "\n",
     "# Annotate probabilities\n",
@@ -4426,8 +4426,8 @@
     "\n",
     "plt.tight_layout()\n",
     "\n",
-    "out_path = '/part-vol-3/weaver-core/parTaaron/InterpPlots/JC_AttnBar.pdf'\n",
-    "os.makedirs(os.path.dirname(out_path), exist_ok=True)\n",
+    "out_path = './JC_AttnBar.pdf'\n",
+    "#os.makedirs(os.path.dirname(out_path), exist_ok=True)\n",
     "plt.savefig(out_path, bbox_inches=\"tight\")\n",
     "plt.show()\n"
    ]
@@ -4696,7 +4696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "e17f44c8",
    "metadata": {},
    "outputs": [
@@ -4730,8 +4730,8 @@
     "ax.set_xticklabels(labels, rotation=30, ha=\"right\")\n",
     "\n",
     "ax.set_ylabel(\"Probability\")\n",
-    "ax.set_xlabel(\"Magnitude Ratio Range\")\n",
-    "ax.set_title(\"Top Landscape Probability Distribution of Attention/Interaction Ratio\", fontsize=12)\n",
+    "ax.set_xlabel(\"Relative Magnitude of Attention/Interaction Scores\")\n",
+    "#ax.set_title(\"Top Landscape Probability Distribution of Attention/Interaction Ratio\", fontsize=12)\n",
     "ax.margins(y=0.05)  # small headroom for annotations\n",
     "\n",
     "# Annotate probabilities\n",
